tercer commit eliminar registro

--- a/angular/lista/src/app/tareas/tareas.component.html
+++ b/angular/lista/src/app/tareas/tareas.component.html
@@ -1,6 +1,6 @@
-<ul>
+<ul class="list-unstyled">
   <li *ngFor="let item of tareas">
-    <app-tarea-individual [tareainfo]="item" ></app-tarea-individual>
+    <app-tarea-individual [tareaInfo]="item" ></app-tarea-individual>
 
   </li>
 </ul>
