--- a/angular/lista/src/app/tarea-individual/tarea-individual.component.html
+++ b/angular/lista/src/app/tarea-individual/tarea-individual.component.html
@@ -1,1 +1,10 @@
-{{ tareainfo.texto }}
+{{ tareaInfo.texto }}
+
+<span class="herramientas">
+  <span class="item editar">
+    <i class="glyphicon glyphicon-pencil" aria-hidden="true"></i>
+  </span>
+  <span class="item borrar ">
+    <i class="glyphicon glyphicon-trash" aria-hidden="true" (click)="borrarRegistro(tareaInfo)"></i>
+  </span>
+</span>
