cuarto commit eliminar y registrar hecho

--- a/angular/lista/src/app/tareas/tareas.component.html
+++ b/angular/lista/src/app/tareas/tareas.component.html
@@ -1,6 +1,10 @@
 <ul class="list-unstyled">
   <li *ngFor="let item of tareas">
-    <app-tarea-individual [tareaInfo]="item" ></app-tarea-individual>
+    <app-tarea-individual [tareaInfo]="item" (cambioTarea)="actualizar()"></app-tarea-individual>
 
   </li>
 </ul>
+<input type="text">
+
+<button (click)="crearRegistro()">BORRAR</button>
+
