--- a/angular/lista/src/app/tarea-individual/tarea-individual.component.html
+++ b/angular/lista/src/app/tarea-individual/tarea-individual.component.html
@@ -1,10 +1,24 @@
-{{ tareaInfo.texto }}
+<div *ngIf="!mostrarDatos">
+  {{ tareaInfo.texto }}
 
-<span class="herramientas">
-  <span class="item editar">
-    <i class="glyphicon glyphicon-pencil" aria-hidden="true"></i>
+  <span class="herramientas">
+    <span class="item editar">
+      <i
+        class="glyphicon glyphicon-pencil"
+        aria-hidden="true"
+        (click)="activarEdicion()"
+      ></i>
+    </span>
+    <span class="item borrar">
+      <i
+        class="glyphicon glyphicon-trash"
+        aria-hidden="true"
+        (click)="borrarRegistro(tareaInfo)"
+      ></i>
+    </span>
   </span>
-  <span class="item borrar ">
-    <i class="glyphicon glyphicon-trash" aria-hidden="true" (click)="borrarRegistro(tareaInfo)"></i>
-  </span>
-</span>
+</div>
+<div *ngIf="mostrarDatos">
+  <input  type="text" #nombreItem/>
+  <i class="glyphicon glyphicon-floppy-disk" aria-hidden="true" (click)="editarTarea(tareaInfo, nombreItem)"></i>
+</div>
